Updated GameService & GameController